create deal(entity)
